--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="phonecatApp">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Google Phone Gallery</title>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="css/app.css">
@@ -19,10 +20,8 @@
   <script src="js/services.js"></script>
 </head>
 <body>
-
-  <div class="view-container">
+  <form class="form-inline view-container">
     <div ng-view class="view-frame"></div>
-  </div>
-
+  </form>
 </body>
 </html>
