Working on layout

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <script src="js/services.js"></script>
 </head>
 <body>
-  <form class="form-inline view-container">
-    <div ng-view class="view-frame"></div>
-  </form>
+  <div ng-view class="container view-container">
+    <!-- <div  class="view-frame"></div> -->
+  </div>
 </body>
 </html>
