Almost rewrote app to use es6 and webpack. Need to fix what left and remove old files.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="phonecatApp">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,15 +13,11 @@
   <script src="node_modules/angular-animate/angular-animate.js"></script>
   <script src="node_modules/angular-route/angular-route.js"></script>
   <script src="node_modules/angular-resource/angular-resource.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/animations.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/services.js"></script>
 </head>
 <body>
-  <div ng-view class="container view-container">
+  <div ng-view class="jumbotron view-container">
     <!-- <div  class="view-frame"></div> -->
   </div>
+  <script src="js/bundle.js"></script>
 </body>
 </html>
