Rewrote app to use es6 syntax and bundling JS with webpack

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <script src="node_modules/angular-resource/angular-resource.js"></script>
 </head>
 <body>
-  <div ng-view class="jumbotron view-container">
-    <!-- <div  class="view-frame"></div> -->
+  <div ng-view class="container view-container">
   </div>
   <script src="js/bundle.js"></script>
 </body>
